# functt

./: COPYING  README.md  meson.build
include/: functt.h  meson.build
test/: area.cpp  comments.cpp  escape.cpp  escaped_html.cpp  meson.build  unescaped_html.cpp  var.cpp
