var = executable('var', 'var.cpp', include_directories : inc)
test('Test plain template variable', var)

escape = executable('escape', 'escape.cpp', include_directories : inc)
test('Test html basic html escape routines', escape)

area = executable('area', 'area.cpp', include_directories : inc)
test('Test template area functionality', area)



