var = executable('escaped_html', 'escaped_html.cpp', include_directories : inc)
test('Test escaped html variable', var)

escape = executable('unescaped_html', 'unescaped_html.cpp', include_directories : inc)
test('Test unescaped html variable', escape)

area = executable('area', 'area.cpp', include_directories : inc)
test('Test template area functionality', area)



